--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,7 @@
   column-gap: 4px;
   display: flex;
   flex-direction: column;
+  opacity: 0.7;
 }
 .input label {
   font-size: 0.35em;
@@ -40,11 +41,14 @@
   max-width: 200px;
   min-width: 100px;
   width: 70%;
-  padding: 0.2em;
+  padding: 0.25em 0;
+  padding-left: 0.5em;
+
+  /* text-align: center; */
   /* line-height: -5px; */
   /* padding-right: 4%; */
-  border-radius: 5px;
-  border: 1px solid #000;
+  border-radius: 8px;
+  border: 1px solid hsl(0, 1%, 8%);
   font-size: 1em;
   font-weight: bold;
   cursor: pointer;
@@ -119,15 +123,35 @@ input[type="number"] {
   color: hsl(259, 100%, 65%);
 }
 @media screen and (max-width: 600px) {
+  .age-calculator {
+    margin: 0 1em !important;
+    padding: 0.65em;
+    box-sizing: border-box;
+  }
   .inputArea {
     width: 100%;
     padding-right: 0;
+    column-gap: 8px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .inputArea .input {
+    width: 90%;
+  }
+  .inputArea .input input {
+    padding-left: 0.35em;
+    font-size: 0.75em;
   }
   .submit-button {
     justify-content: center;
     align-items: center;
+    width: 100%;
+  }
+  .submit-button::before {
+    width: 80%;
+    position: absolute;
   }
   .submit-button button {
+    align-self: center;
     margin: 0 auto;
   }
   .age > * {
